src/objects/Opportunity/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Market__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Photonics</fullName>
            </value>
            <value>
                <fullName>TTRS</fullName>
            </value>
            <value>
                <fullName>Uncooled Detector Cooling</fullName>
            </value>
            <value>
                <fullName>Detector cooling (other than uncooled)</fullName>
            </value>
            <value>
                <fullName>Laser cooling</fullName>
            </value>
            <value>
                <fullName>Enclosure cooling</fullName>
            </value>
            <value>
                <fullName>Space, detector/sensor cooling</fullName>
            </value>
            <value>
                <fullName>Space, other</fullName>
            </value>
            <value>
                <fullName>Commercial/Industrial photonics</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Transmission - Fixed Wavelength Laser CW - Legacy Butterfly</fullName>
            </value>
            <value>
                <fullName>Transmission - Fixed Wavelength Laser CW - MSA TOSA</fullName>
            </value>
            <value>
                <fullName>Transmission - Fixed Wavelength Laser CW - TO Can</fullName>
            </value>
            <value>
                <fullName>Transmission - Fixed Wavelength Laser DML - Legacy Butterfly</fullName>
            </value>
            <value>
                <fullName>Transmission - Fixed Wavelength Laser DML - MSA TOSA</fullName>
            </value>
            <value>
                <fullName>Transmission - Fixed Wavelength Laser DML - TO Can</fullName>
            </value>
            <value>
                <fullName>Transmission - Fixed Wavelength Laser EA/MZ/CML - Legacy Butterfly</fullName>
            </value>
            <value>
                <fullName>Transmission - Fixed Wavelength Laser EA/MZ/CML - MSA TOSA</fullName>
            </value>
            <value>
                <fullName>Transmission - Fixed Wavelength Laser EA/MZ/CML - TO Can</fullName>
            </value>
            <value>
                <fullName>Transmission - Tunable Laser CW - Legacy Butterfly</fullName>
            </value>
            <value>
                <fullName>Transmission - Tunable Laser CW - MSA TOSA</fullName>
            </value>
            <value>
                <fullName>Transmission - Tunable Laser CW - TO Can</fullName>
            </value>
            <value>
                <fullName>Transmission - Tunable Laser DML - Legacy Butterfly</fullName>
            </value>
            <value>
                <fullName>Transmission - Tunable Laser DML - MSA TOSA</fullName>
            </value>
            <value>
                <fullName>Transmission - Tunable Laser DML - TO Can</fullName>
            </value>
            <value>
                <fullName>Transmission - Tunable Laser EA/MZ/CML - Legacy Butterfly</fullName>
            </value>
            <value>
                <fullName>Transmission - Tunable Laser EA/MZ/CML - MSA TOSA</fullName>
            </value>
            <value>
                <fullName>Transmission - Tunable Laser EA/MZ/CML - TO Can</fullName>
            </value>
            <value>
                <fullName>980nm Pump Lasers - Legacy Butterfly</fullName>
            </value>
            <value>
                <fullName>980nm Pump Lasers - miniDIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>