src/objects/Opportunity/fields/Global_Ultimate_Account__c.field-meta.xml
<CustomField>
    <fullName>Global_Ultimate_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Global Ultimate Account</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Value does not exist or does not match a Global Parent Account</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Global Parent</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oppty/DRs (Global Ultimate Account)</relationshipLabel>
    <relationshipName>Oppty_DRs</relationshipName>
    <type>Lookup</type>
</CustomField>