src/objects/Opportunity/fields/Media__c.field-meta.xml
<CustomField>
    <fullName>Media__c</fullName>
    <label>Media</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>5-Sep</fullName>
            </value>
            <value>
                <fullName>AKL</fullName>
            </value>
            <value>
                <fullName>ARTESIAN</fullName>
            </value>
            <value>
                <fullName>BINGO</fullName>
            </value>
            <value>
                <fullName>Blechexpo</fullName>
            </value>
            <value>
                <fullName>BL</fullName>
            </value>
            <value>
                <fullName>Bodkin</fullName>
            </value>
            <value>
                <fullName>BOX LABEL</fullName>
            </value>
            <value>
                <fullName>Brochure</fullName>
            </value>
            <value>
                <fullName>CANADIAN I</fullName>
            </value>
            <value>
                <fullName>CANADIAN M</fullName>
            </value>
            <value>
                <fullName>CLEO</fullName>
            </value>
            <value>
                <fullName>CMTS</fullName>
            </value>
            <value>
                <fullName>COMPETITOR</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>EALA</fullName>
            </value>
            <value>
                <fullName>EDA</fullName>
            </value>
            <value>
                <fullName>EuroBLECH</fullName>
            </value>
            <value>
                <fullName>Expolaser</fullName>
            </value>
            <value>
                <fullName>FABRICATOR</fullName>
            </value>
            <value>
                <fullName>FABTECH</fullName>
            </value>
            <value>
                <fullName>Fabtech Canada</fullName>
            </value>
            <value>
                <fullName>Fabtech US</fullName>
            </value>
            <value>
                <fullName>FORMING &amp;</fullName>
            </value>
            <value>
                <fullName>Global Spec.</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Harris</fullName>
            </value>
            <value>
                <fullName>HARRIS GUI</fullName>
            </value>
            <value>
                <fullName>Hoover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>