src/objects/Opportunity/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>Used to track the business segment of the opportunity in order to more accurately categorize bookings.</description>
    <inlineHelpText>Enter the business segment of the opportunity in order to categorize for the bookings report.</inlineHelpText>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AdvMat</fullName>
            </value>
            <value>
                <fullName>Aftermarket</fullName>
            </value>
            <value>
                <fullName>Epiworks</fullName>
            </value>
            <value>
                <fullName>HighYag</fullName>
            </value>
            <value>
                <fullName>Laser Enterprise</fullName>
            </value>
            <value>
                <fullName>Marlow</fullName>
            </value>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>M Cubed</fullName>
            </value>
            <value>
                <fullName>Military</fullName>
            </value>
            <value>
                <fullName>OEM - High Power</fullName>
            </value>
            <value>
                <fullName>OEM - Low Power</fullName>
            </value>
            <value>
                <fullName>Other &amp; University</fullName>
            </value>
            <value>
                <fullName>Photop</fullName>
            </value>
            <value>
                <fullName>Suwtech</fullName>
            </value>
            <value>
                <fullName>VLOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>