src/objects/Opportunity/fields/VAR_SI__c.field-meta.xml
<CustomField>
    <fullName>VAR_SI__c</fullName>
    <label>VAR/SI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>9 to 5 computer</fullName>
            </value>
            <value>
                <fullName>AAJ Networks</fullName>
            </value>
            <value>
                <fullName>Abba</fullName>
            </value>
            <value>
                <fullName>ABCOM</fullName>
            </value>
            <value>
                <fullName>ACE Computers</fullName>
            </value>
            <value>
                <fullName>ACE Technology</fullName>
            </value>
            <value>
                <fullName>Advanced HPC</fullName>
            </value>
            <value>
                <fullName>Advanced Micro Technology (AMT)</fullName>
            </value>
            <value>
                <fullName>Advantec</fullName>
            </value>
            <value>
                <fullName>Advantech</fullName>
            </value>
            <value>
                <fullName>Aeon Computing</fullName>
            </value>
            <value>
                <fullName>Aerolit LLC</fullName>
            </value>
            <value>
                <fullName>AFL Hyperscale</fullName>
            </value>
            <value>
                <fullName>Agile IT</fullName>
            </value>
            <value>
                <fullName>Akira Technologies</fullName>
            </value>
            <value>
                <fullName>Allied Business Machines</fullName>
            </value>
            <value>
                <fullName>All Solutions Inc</fullName>
            </value>
            <value>
                <fullName>Alpha Micro Components USA</fullName>
            </value>
            <value>
                <fullName>Amax</fullName>
            </value>
            <value>
                <fullName>AmiStar</fullName>
            </value>
            <value>
                <fullName>Anacapa Micro Products</fullName>
            </value>
            <value>
                <fullName>Anixter</fullName>
            </value>
            <value>
                <fullName>Apollo Informations Sys Group</fullName>
            </value>
            <value>
                <fullName>Applied Computer (ACS)</fullName>
            </value>
            <value>
                <fullName>Avian</fullName>
            </value>
            <value>
                <fullName>Axiom Connectivity</fullName>
            </value>
            <value>
                <fullName>Axiom Memory Solutions</fullName>
            </value>
            <value>
                <fullName>BahFed</fullName>
            </value>
            <value>
                <fullName>Bar None Tech</fullName>
            </value>
            <value>
                <fullName>Beijing Bright Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>