src/objects/Opportunity/recordTypes/Aftermarket.recordType-meta.xml
<RecordType>
    <fullName>Aftermarket</fullName>
    <active>true</active>
    <businessProcess>Aftermarket</businessProcess>
    <label>Aftermarket</label>
</RecordType>