src/objects/Opportunity/recordTypes/Custom_Part.recordType-meta.xml
<RecordType>
    <fullName>Custom_Part</fullName>
    <active>true</active>
    <businessProcess>Custom Part</businessProcess>
    <label>Custom Part</label>
</RecordType>