src/objects/Opportunity/listViews/All_DRs.listView-meta.xml
<ListView>
    <fullName>All_DRs</fullName>
    <columns>Number__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Marketing_PN__c</columns>
    <columns>Next_12_Months_Revenue__c</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <columns>Next_Action_Due_Date__c</columns>
    <columns>RSM__c</columns>
    <columns>Rep_Firm_Name__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>Duplicate_Design_Registration__c</columns>
    <columns>Design_Registration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All DRs</label>
</ListView>