src/objects/Opportunity/listViews/All_Opptys.listView-meta.xml
<ListView>
    <fullName>All_Opptys</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Marketing_PN__c</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Design_Registration__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Opptys</label>
</ListView>